compiling_error.txt
In file included from E:\Universidad\2018-2\IA\Entrega2_KS\IA\KillerSudoku.h:7:0,
                 from E:\Universidad\2018-2\IA\Entrega2_KS\IA\prueba.cpp:8:
E:\Universidad\2018-2\IA\Entrega2_KS\IA\celda.h:8:7: error: redefinition of 'class Celda'
 class Celda{
       ^~~~~
In file included from E:\Universidad\2018-2\IA\Entrega2_KS\IA\prueba.cpp:7:0:
E:\Universidad\2018-2\IA\Entrega2_KS\IA\celda.h:8:7: error: previous definition of 'class Celda'
 class Celda{
       ^~~~~
In file included from E:\Universidad\2018-2\IA\Entrega2_KS\IA\prueba.cpp:8:0:
E:\Universidad\2018-2\IA\Entrega2_KS\IA\KillerSudoku.h: In constructor 'KS::KS()':
E:\Universidad\2018-2\IA\Entrega2_KS\IA\KillerSudoku.h:26:31: error: returning a value from a constructor
       if(!file.good()) return 1;
                               ^
